--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.87",
     "@nuxt/image": "^2.0.0",
     "sass-embedded": "^1.97.3"
   }
