--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.88",
     "@nuxt/icon": "^2.2.1",
     "@nuxt/image": "^2.0.0",
     "sass-embedded": "^1.97.3"
